kube/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mahakam-api
  namespace: mahakam-system
  labels:
    app: mahakam-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mahakam-api
  template:
    metadata:
      labels:
        app: mahakam-api
    spec:
      serviceAccountName: mahakam-api
      containers:
        - name: api
          image: mahakam-api
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
