kube/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mahakam-web
  namespace: mahakam-system
  labels:
    app: mahakam-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mahakam-web
  template:
    metadata:
      labels:
        app: mahakam-web
    spec:
      containers:
        - name: web
          image: mahakam-web
          ports:
            - containerPort: 3001
