kube/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahakam-api
  namespace: mahakam-system
spec:
  selector:
    app: mahakam-api
  ports:
    - port: 3000
      targetPort: 3000
