kube/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahakam-web
  namespace: mahakam-system
spec:
  selector:
    app: mahakam-web
  ports:
    - port: 3001
      targetPort: 3001
